# hatch-mkdocs-template

./: LICENSE.txt  README.md  pyproject.toml
src/hatch_mkdocs_template/: __about__.py  file_templates.py  hooks.py  plugin.py
tests/: __init__.py
